# cpp-fractal-app

./: .gitignore  CMakeLists.txt  README.md  git_push_debug.txt  git_push_debug2.txt
src/: main.cpp
